# diploma

./: .env.sample  .gitignore  README.md  db.json  graph.json  pyproject.toml
config/: settings.py  urls.py
content/: admin.py  models.py  services.py  urls.py  views.py
content/management/commands/: del_graph.py  graph.py
content/migrations/: 0001_initial.py  0002_category_alter_movie_options_remove_movie_category_and_more.py  0003_movie_category_alter_movie_view_movies.py  0004_alter_category_name.py  0005_alter_movie_name_alter_movie_view_movies.py  0006_alter_movie_view_movies.py  0007_alter_movie_view_movies.py  0008_alter_movie_view_movies.py  0009_alter_movie_view_movies.py  0010_alter_movie_view_movies.py  0011_alter_movie_view_movies.py  0012_alter_movie_view_movies.py  0013_alter_movie_view_movies.py  0014_alter_movie_view_movies.py  0015_movie_rank_alter_movie_view_movies.py  0016_remove_movie_rank_alter_movie_view_movies.py
content/templates/content/: base.html  home.html  mailing_detail.html  mailing_list.html  movie_detail.html  movie_list.html  statistics.html
content/templates/content/includes/: inc_footer.html  inc_main_menu.html
content_api/: serializers.py  urls.py  views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: aut.py  csu.py
users/migrations/: 0001_initial.py  0002_remove_user_views.py
users/templates/users/: user_list.html
users_api/: paginators.py  permissions.py  serializers.py  urls.py  views.py
